Bug 295535 - Folder View widget forgets it's size
Summary: Folder View widget forgets it's size
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-folderview (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Ignat Semenov
URL:
Keywords:
: 311842 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-08 15:09 UTC by Ovidiu D. Niţan
Modified: 2013-04-09 08:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ovidiu D. Niţan 2012-03-08 15:09:55 UTC
Starting with 4.8.1, the Folder View widget seems to not remember it's size after logout. This behaviour seems to happen only when I set "Folder View" as desktop layout; when using "Default desktop", this issue doesn't occur.

Reproductibility: always
How to reproduce:
1. Set the desktop layout as "Folder View"
2. Add a new "Folder View" widget on screen
3. Resize the Folder View widget
4. quitapp plasma-desktop && plasma-desktop & and you'll see that the previously-resized Folder View has it's default width and height.

Here's a picture which illustrate this bug: http://i.imgur.com/oVINI.jpg . On the left you'll see the Folder Widget before quiting Plasma and on the right you'll see Folder Widget after starting Plasma.
Comment 1 Aaron J. Seigo 2012-03-19 19:33:32 UTC
Git commit 06858a5fde5aef25131300a7a2a88dbddec27eb2 by Aaron Seigo.
Committed on 19/03/2012 at 20:31.
Pushed by aseigo into branch 'KDE/4.8'.

only restore state when coming out of being iconified

M  +11   -1    plasma/applets/folderview/folderview.cpp

http://commits.kde.org/kde-baseapps/06858a5fde5aef25131300a7a2a88dbddec27eb2
Comment 2 Aaron J. Seigo 2012-03-19 19:33:33 UTC
Git commit 410c44bf994ba06ae5a9afd4ef33cdb7e9cdb1d4 by Aaron Seigo.
Committed on 19/03/2012 at 20:31.
Pushed by aseigo into branch 'master'.

only restore state when coming out of being iconified

M  +11   -1    plasma/applets/folderview/folderview.cpp

http://commits.kde.org/kde-baseapps/410c44bf994ba06ae5a9afd4ef33cdb7e9cdb1d4
Comment 3 JoseLuisT 2012-08-15 17:40:42 UTC
I have KDE 4.9.00 r558 and Qt 4.82 from open suse packages, I can't get that widget to remember it's size. Plasma Desktop crashes often after I logout from session, but even when it don't, the widget don't remember it's size.
Comment 4 Ignat Semenov 2013-04-09 08:02:38 UTC
*** Bug 311842 has been marked as a duplicate of this bug. ***