only restore state when coming out of being iconified

BUG:295535